<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="de.neofonie.mbak.appportfolio.MainActivity">

  <TextView
      android:text="@string/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:layout_marginTop="33dp"
      android:id="@+id/title_tv"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/movies_label"
      android:id="@+id/movies_btn"
      android:layout_marginTop="47dp"
      android:onClick="buttonClicked"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/stock_label"
      android:id="@+id/stock_btn"
      android:onClick="buttonClicked"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/bigger_label"
      android:id="@+id/bigger_btn"
      android:onClick="buttonClicked"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/make_material_label"
      android:id="@+id/material_btn"
      android:onClick="buttonClicked"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/go_ubiquitous_label"
      android:id="@+id/ubiquitous_btn"
      android:onClick="buttonClicked"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/capstone_label"
      android:id="@+id/capstone_btn"
      android:onClick="buttonClicked"/>

</LinearLayout>
